--- a/content.html
+++ b/content.html
@@ -23,6 +23,7 @@
         <li><a href="#Loops-While">While</a></li>
     </ul>
     <li><a href="#Functions">Functions</a></li>
+    <li><a href="#Classes">Classes</a></li>
     <li><a href="#Files">Files</a></li>
     <li><a href="#Modules">Modules</a></li>
     <ul>
