--- a/index.html
+++ b/index.html
@@ -736,8 +736,10 @@ class VirtualMoney (Money):
 </pre>
 
 <pre class="prettyprint lang-python">
-virtual_money = VirtualMoney(220, 'EUR', '2018-12-31')
+virtual_money = VirtualMoney('2018-12-31')
+</pre>
 
+<pre class="prettyprint lang-python">
 virtual_money.amount = 20
 virtual_money.currency = 'DIS'
 </pre>
