--- a/content.html
+++ b/content.html
@@ -1,4 +1,5 @@
 <ul>
+    <li><a href="#Notes">Notes</a></li>
     <li><a href="#Arithmetic-Operators">Arithmetic Operators</a></li>
     <li><a href="#Variables">Variables</a></li>
     <ul>
