--- a/index.html
+++ b/index.html
@@ -142,6 +142,7 @@
 <h1>A Python Primer and Cheat Sheet.</h1>
 
 <ul>
+    <li><a href="#Notes">Notes</a></li>
     <li><a href="#Arithmetic-Operators">Arithmetic Operators</a></li>
     <li><a href="#Variables">Variables</a></li>
     <ul>
@@ -174,6 +175,37 @@
         <li><a href="#Modules-Math">Math</a></li>
     </ul>
 </ul>
+
+<!-- Notes
+*************************************************** -->
+<h2><a id="Notes" href="#Notes" class="anchor"># Notes</a></h2>
+
+<p class="note">Handle exceptions.</p>
+<pre class="prettyprint lang-python">
+try:
+    # do something
+
+except Exception as e:
+    print('Error: ' + str(e))
+    # do something
+
+finally:
+    # do something
+</pre>
+
+<p class="note">Divison errors.</p>
+<pre class="prettyprint lang-python">
+try:
+    1.0 / 0.0
+
+except ZeroDivisionError:
+    print('Cannot divide with zero.')
+    # do something
+
+except Exception as e:
+    print('Error: ' + str(e))
+    # do something
+</pre>
 
 <!-- Arithmetic Operators 
 *************************************************** -->
