--- a/pages/0-notes.html
+++ b/pages/0-notes.html
@@ -2,6 +2,21 @@
 *************************************************** -->
 <h2><a id="Notes" href="#Notes" class="anchor"># Notes</a></h2>
 
+<p class="note">Execute code.</p>
+<pre class="prettyprint lang-python">
+#!/usr/bin/python
+
+def main():
+    # do something
+
+    return
+
+if (__name__ == "__main__"):
+    main()
+</pre>
+
+<strong>$ python filename.py</strong>
+
 <p class="note">Handle exceptions.</p>
 <pre class="prettyprint lang-python">
 try:
