updated build.py and notes

--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@ if (__name__ == "__main__"):
     main()
 </pre>
 
-<strong>$ python filename.py</strong>
+<p>Run with: <strong>$ python filename.py</strong></p>
 
 <p class="note">Handle exceptions.</p>
 <pre class="prettyprint lang-python">
