updated numerical operations

--- a/pages/1-arithmetic-operators.html
+++ b/pages/1-arithmetic-operators.html
@@ -46,11 +46,9 @@ max(1, 2, 3, 4)         # 4
 
 <p class="note">Rounding values.</p>
 <pre class="prettyprint lang-python">
-int(2.945)              # 2
-</pre>
-
-<pre class="prettyprint lang-python">
 round(2.945)            # 3.0
 round(2.495)            # 2.0
 round(2.945, 2)         # 2.94
 </pre>
+
+<p class="note">See <a href="#Modules-Math">Math</a> for more.</p>
