--- a/pages/9-modules.html
+++ b/pages/9-modules.html
@@ -46,7 +46,7 @@ math.pi                     # 3.14159265359
 math.e                      # 2.71828182846
 </pre>
 
-<p class="note">Mathematical functions, more at <a href="https://docs.python.org/2/library/math.html">https://docs.python.org/2/library/math.html</a>.</p>
+<p class="note">Numerical operations, more at <a href="https://docs.python.org/2/library/math.html">https://docs.python.org/2/library/math.html</a>.</p>
 <pre class="prettyprint lang-python">
 math.floor(2.945)           # 2.0
 math.trunc(2.945)           # 2
