--- a/index.html
+++ b/index.html
@@ -260,14 +260,12 @@ max(1, 2, 3, 4)         # 4
 
 <p class="note">Rounding values.</p>
 <pre class="prettyprint lang-python">
-int(2.945)              # 2
-</pre>
-
-<pre class="prettyprint lang-python">
 round(2.945)            # 3.0
 round(2.495)            # 2.0
 round(2.945, 2)         # 2.94
 </pre>
+
+<p class="note">See <a href="#Modules-Math">Math</a> for more.</p>
 
 <!-- Variables
 *************************************************** -->
@@ -863,7 +861,7 @@ math.pi                     # 3.14159265359
 math.e                      # 2.71828182846
 </pre>
 
-<p class="note">Mathematical functions, more at <a href="https://docs.python.org/2/library/math.html">https://docs.python.org/2/library/math.html</a>.</p>
+<p class="note">Numerical operations, more at <a href="https://docs.python.org/2/library/math.html">https://docs.python.org/2/library/math.html</a>.</p>
 <pre class="prettyprint lang-python">
 math.floor(2.945)           # 2.0
 math.trunc(2.945)           # 2
