--- a/pages/0-notes.html
+++ b/pages/0-notes.html
@@ -15,7 +15,7 @@ if (__name__ == "__main__"):
     main()
 </pre>
 
-<p>Run with: <strong>$ python filename.py</strong></p>
+<p>Build and run with: <strong>$ python filename.py</strong>.</p>
 
 <p class="note">Handle exceptions.</p>
 <pre class="prettyprint lang-python">
@@ -23,11 +23,11 @@ try:
     # do something
 
 except ZeroDivisionError:
-    print('Cannot divide with zero.')
+    print ('Cannot divide with zero.')
     # do something
 
 except Exception as e:
-    print('Error: ' + str(e))
+    print ('Error: ' + str(e))
     # do something
 
 finally:
