--- a/pages/1-arithmetic-operators.html
+++ b/pages/1-arithmetic-operators.html
@@ -7,6 +7,9 @@
 20 - 10                 # 10
 10 * 20                 # 200
 20 / 10                 # 2
+</pre>
+
+<pre class="prettyprint lang-python">
 10 ** 2                 # 100
 </pre>
 
@@ -23,14 +26,14 @@
 30.0 / 20.0             # 1.5
 </pre>
 
-<p class="note">Integer divison, or the quotient.</p>
+<p class="note">Integer divison, or quotient.</p>
 <pre class="prettyprint lang-python">
 20.0 // 20.0            # 1.0
 30.0 // 20.0            # 1.0
 40.0 // 20.0            # 2.0
 </pre>
 
-<p class="note">Modulo, or the remainder.</p>
+<p class="note">Modulo, or remainder.</p>
 <pre class="prettyprint lang-python">
 12.5 % 10.0             # 2.5
 10.0 % 20.0             # 10.0
@@ -48,7 +51,10 @@ max(1, 2, 3, 4)         # 4
 <pre class="prettyprint lang-python">
 round(2.945)            # 3.0
 round(2.495)            # 2.0
+</pre>
+
+<pre class="prettyprint lang-python">
 round(2.945, 2)         # 2.94
 </pre>
 
-<p class="note">See <a href="#Modules-Math">Math</a> for more.</p>
+<p class="note">See <a href="#Modules-Math"><strong>Math</strong></a> for more.</p>
