--- a/pages/5-loops.html
+++ b/pages/5-loops.html
@@ -2,13 +2,11 @@
 *************************************************** -->
 <h2><a id="Loops" href="#Loops" class="anchor"># Loops</a></h2>
 
+<h3><a id="Loops-For" href="#Loops-For" class="anchor"># For</a></h3>
 <pre class="prettyprint lang-python">
 numbers = [1, 2, 3, 4]
-a = 0
-b = 5
 </pre>
 
-<h3><a id="Loops-For" href="#Loops-For" class="anchor"># For</a></h3>
 <pre class="prettyprint lang-python">
 for number in numbers:
     # do something
@@ -39,6 +37,15 @@ for key, value in dict.items():
 
 <h3><a id="Loops-While" href="#Loops-While" class="anchor"># While</a></h3>
 <pre class="prettyprint lang-python">
+a = 0
+b = 5
+</pre>
+<pre class="prettyprint lang-python">
 while (a < b):
     # do something
+
+    a += 1
+</pre>
+<pre class="prettyprint lang-python">
+print (a)                           # 5
 </pre>
