--- a/pages/8-files.html
+++ b/pages/8-files.html
@@ -23,7 +23,7 @@ with open('path/to/file.txt', 'r') as file:
 
 <p class="note">Write data to a text-file.</p>
 <pre class="prettyprint lang-python">
-with open('path/to/file.txt', 'r+') as file:
+with open('path/to/file.txt', 'w') as file:
 
     file.write('This is some text to write.')
 </pre>
