updated url and title

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-    <title>A Python Primer and Cheat Sheet. | Michael Sjoeberg</title>
+    <title>A Python Primer and Cheat Sheet | Michael Sjoeberg</title>
 
     <!-- Google Source Code Pro Font -->
     <!-- <link href="https://fonts.googleapis.com/css?family=Source+Code+Pro" rel="stylesheet"> -->
@@ -138,8 +138,8 @@
     }
 </style>
 
-<a href="https://michaelsjoeberg.com">Michael Sjoeberg</a>
-<h1>A Python Primer and Cheat Sheet.</h1>
+<a href="https://www.michaelsjoeberg.com">Michael Sjoeberg</a>
+<h1>A Python Primer and Cheat Sheet</h1>
 
 <ul>
     <li><a href="#Notes">Notes</a></li>
